--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@next/font": "13.2.4",
+    "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.10.0",
+    "lodash.debounce": "^4.0.8",
+    "millify": "^6.1.0",
     "next": "13.2.4",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^4.0.1",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.3"
   }
 }
